Update GitHub Actions workflow to use Bash instead of PowerShell
- Changed the shell for the Install dependencies and Build with PyInstaller steps from PowerShell to Bash for consistency across the workflow.
- Ensured that the Post-build smoke test remains in PowerShell to maintain compatibility with Windows execution.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,10 +76,10 @@ jobs:
           version: 1.8.2
       - name: Install dependencies
         run: poetry install
-        shell: pwsh
+        shell: bash
       - name: Build with PyInstaller
         run: poetry run pyinstaller run_cli.py --paths src --name askit-cli --onedir --clean --exclude-module tkinter --exclude-module matplotlib --exclude-module numpy --exclude-module scipy --exclude-module PIL --exclude-module IPython
-        shell: pwsh
+        shell: bash
       - name: Post-build smoke test
         run: .\dist\askit-cli\askit-cli.exe config --help
         shell: pwsh
